--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -1,1 +1,149 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@charset "UTF-8";
+/* klistra in all css här i sass ordning och sedan  importera filen på varje sida , ändra i bodyn på varje sida om du vill ha en annan bakgrund */
+* {
+  position: relative;
+}
+
+* #firstPage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+}
+
+* body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0;
+}
+
+* .button-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100vw;
+}
+
+* .firstpage-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 10rem;
+  height: 10rem;
+  border-radius: 20px;
+  border: none;
+  color: Black;
+  font-weight: bold;
+  background-color: rgba(249, 177, 34, 0.75);
+  margin: 0 1rem 5rem;
+}
+
+* .loggabox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100vw;
+  height: 100px;
+  background: rgba(197, 196, 196, 0.9);
+}
+
+* .squeedLogga {
+  width: 289px;
+  height: 100px;
+  font-family: Changa;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 50px;
+  line-height: 118px;
+  color: rgba(249, 177, 34, 0.9);
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+@media (max-width: 812px) {
+  * body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  * .box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    justify-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background: rgba(197, 196, 196, 0.8);
+    width: 300px;
+    height: 400px;
+    border-radius: 10%;
+    margin: 5rem 0 0 0;
+  }
+  * .google-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-items: center;
+    border-radius: 10px;
+    height: 2rem;
+    width: 5rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-color: white;
+    font-weight: bold;
+    font-size: 0.9rem;
+  }
+  * .container-box {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    border: 3px solid pink;
+    margin: 2rem;
+    height: 30rem;
+  }
+}
+/*# sourceMappingURL=style.css.map */
