--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,1 +1,103 @@
 /* klistra in all css här i sass ordning och sedan  importera filen på varje sida , ändra i bodyn på varje sida om du vill ha en annan bakgrund */
+
+* {
+    position: relative;
+
+    #firstPage {
+        display: flex;
+        flex-flow: row wrap;
+        flex-direction: row;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+        width: 100vw;
+      }
+
+      body {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+
+      }
+
+      .button-container {
+        display: flex;
+        justify-content: center;
+        width: 100vw;
+    }
+    .firstpage-button {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 10rem;
+        height: 10rem;
+        border-radius: 20px;
+        border: none;
+        color: Black;
+        font-weight: bold;
+        background-color: rgba(249, 177, 34, 0.75);
+        margin: 0 1rem 5rem;
+      }
+
+      .loggabox {
+        display: flex;
+        margin: 0;
+      justify-content: center;
+      width: 100vw;
+      height: 100px;
+      background: rgba(197, 196, 196, 0.9);
+    }
+
+    .squeedLogga {
+        width: 289px;
+        height: 100px;
+        font-family: Changa;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 50px;
+        line-height: 118px;
+        color:  rgba(249, 177, 34, 0.9);
+        flex: 1 1 auto;
+      }
+      @media (max-width: 812px) {
+        body {
+          display: flex;
+          flex-direction: column;
+          margin: 0;
+          background-size: cover;
+          background-attachment: fixed;
+        }
+        
+        .box{
+            display: flex;
+            flex-direction: column;
+            justify-items: center;
+            align-items: center;
+            background: rgba(197, 196, 196, 0.8);
+            width: 300px;
+            height: 400px;
+            border-radius: 10%;
+            margin: 5rem 0 0 0;
+        }
+        .google-btn{
+            display: flex;
+            justify-items: center;
+            border-radius: 10px;
+            height: 2rem;
+            width: 5rem ;
+            justify-content: center;
+            background-color: white;
+            font-weight: bold;
+            font-size: 0.9rem;
+        }
+        .container-box{
+          box-sizing: border-box;
+          border: 3px solid pink;
+          margin: 2rem;
+          height: 30rem;
+        }
+        }
+
+    
+  }
