--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,9 @@
 
 * {
     position: relative;
+    background: url("/src/assets/squeed2.jpg") no-repeat center center fixed;
+    background-size: cover;
+}
 
     #firstPage {
         display: flex;
@@ -46,10 +49,10 @@
       justify-content: center;
       width: 100vw;
       height: 100px;
-      background: rgba(197, 196, 196, 0.9);
+      background: rgba(197, 196, 196, 0.1);
     }
 
-    .squeedLogga {
+    .squeedLogga, a {
         width: 289px;
         height: 100px;
         font-family: Changa;
@@ -59,6 +62,10 @@
         line-height: 118px;
         color:  rgba(249, 177, 34, 0.9);
         flex: 1 1 auto;
+      }
+      a:hover{
+        color: rgba(249, 177, 34, 0.9);
+        text-decoration: none;
       }
       @media (max-width: 812px) {
         body {
@@ -97,7 +104,14 @@
           margin: 2rem;
           height: 30rem;
         }
+        .sticky {
+            position: fixed;
+            top: 0;
+            width: 100%
+          }
         }
+        
+
 
     
-  }
+  
