--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,117 +1,206 @@
-/* klistra in all css här i sass ordning och sedan  importera filen på varje sida , ändra i bodyn på varje sida om du vill ha en annan bakgrund */
 
 * {
     position: relative;
     background: url("/src/assets/squeed2.jpg") no-repeat center center fixed;
     background-size: cover;
 }
+body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 
-    #firstPage {
-        display: flex;
-        flex-flow: row wrap;
-        flex-direction: row;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-        width: 100vw;
-      }
+#firstPage {
+    display: flex;
+    flex-flow: row wrap;
+    flex-direction: row;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
 
-      body {
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-
-      }
-
-      .button-container {
-        display: flex;
-        justify-content: center;
-        width: 100vw;
-    }
-    .firstpage-button {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 10rem;
-        height: 10rem;
-        border-radius: 20px;
-        border: none;
-        color: Black;
-        font-weight: bold;
-        background-color: rgba(249, 177, 34, 0.75);
-        margin: 0 1rem 5rem;
-      }
-
-      .loggabox {
-        display: flex;
-        margin: 0;
-      justify-content: center;
-      width: 100vw;
-      height: 100px;
-      background: rgba(197, 196, 196, 0.1);
-    }
-
-    .squeedLogga, a {
-        width: 289px;
-        height: 100px;
-        font-family: Changa;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 50px;
-        line-height: 118px;
-        color:  rgba(249, 177, 34, 0.9);
-        flex: 1 1 auto;
-      }
-      a:hover{
-        color: rgba(249, 177, 34, 0.9);
-        text-decoration: none;
-      }
-      @media (max-width: 812px) {
-        body {
-          display: flex;
-          flex-direction: column;
-          margin: 0;
-          background-size: cover;
-          background-attachment: fixed;
-        }
-        
-        .box{
-            display: flex;
-            flex-direction: column;
-            justify-items: center;
-            align-items: center;
-            background: rgba(197, 196, 196, 0.8);
-            width: 300px;
-            height: 400px;
-            border-radius: 10%;
-            margin: 5rem 0 0 0;
-        }
-        .google-btn{
-            display: flex;
-            justify-items: center;
-            border-radius: 10px;
-            height: 2rem;
-            width: 5rem ;
-            justify-content: center;
-            background-color: white;
-            font-weight: bold;
-            font-size: 0.9rem;
-        }
-        .container-box{
-          box-sizing: border-box;
-          border: 3px solid pink;
-          margin: 2rem;
-          height: 30rem;
-        }
-        .sticky {
-            position: fixed;
-            top: 0;
-            width: 100%
-          }
-        }
-        
-
-
+}
+.reportPage {
+    background: #343A40;
     
+}
+a{
+    position: relative;
+
+}
+
+.back-btn{
+position: absolute;
+top: 50%;
+}
+.button-container {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+}
+.firstpage-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    height: 10rem;
+    border-radius: 20px;
+    border: none;
+    color: Black;
+    font-weight: bold;
+    background-color: rgba(249, 177, 34, 0.75);
+    margin: 0 1rem 5rem;
+}
+
+.loggabox {
+    display: flex;
+    margin: 0;
+    justify-content: center;
+    width: 100vw;
+    height: 100px;
+    background: rgba(197, 196, 196, 0.8);
+}
+
+.squeedLogga,
+a {
+    width: 289px;
+    height: 100px;
+    font-family: Changa;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    line-height: 118px;
+    color: rgba(249, 177, 34, 0.9);
+    flex: 1 1 auto;
+}
+a:hover {
+    color: rgba(249, 177, 34, 0.9);
+    text-decoration: none;
+}
+.container-box{
+    margin-top: 5rem;
+}
+table {
+    width: 100%; 
+    border-collapse: collapse;
+    text-align: left; 
+}
+table-box,
+td,
+th {
+    border-bottom: 1px solid black;
+    margin: 7rem;
+    padding: 6px; 
+    text-align: left;
+
+}
+th {
+    color: white;
+    align-content: center;
+}
+tr {
+    color: white;
+    align-items: center;
+}
+
+
+@media (max-width: 812px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+
+    .box {
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+        background: rgba(197, 196, 196, 0.8);
+        width: 300px;
+        height: 400px;
+        border-radius: 10%;
+        margin: 5rem 0 0;
+    }
+    .edit-btn{
+        border-radius: 10%;
+    }
+    .google-btn {
+        display: flex;
+        justify-items: center;
+        border-radius: 10px;
+        height: 2rem;
+        width: 5rem;
+        justify-content: center;
+        background-color: white;
+        font-weight: bold;
+        font-size: 0.9rem;
+    }
+    .container-box {
+        box-sizing: border-box;
+        margin: 2rem;
+        height: 30rem;
+    }
+    .sticky {
+        position: fixed;
+        top: 0;
+        width: 100%;
+    }
+    .sendReport {
+        border: 1px solid black;
+        border-radius: 10px;
+    }
+    .redigera {
+        border: 1px solid black;
+        margin: 1rem;
+        width: 7rem;
+        border-radius: 10px;
+    }
+    p {
+        font-size: 1rem;
+    }
   
+    .container-box .container th tr {
+        box-sizing: border-box;
+        margin: 5rem;
+        height: 30rem;
+        background-color: white;
+    }
+    #ReportPage{
+        align-items: center;
+        vertical-align: bottom;
+        text-align: left;
+
+}
+table-box,
+td,
+th {
+    border-bottom: 1px solid black;
+    margin: 7rem;
+    padding: 6px; 
+    text-align: left;
+
+
+}
+th {
+    color: white;
+    align-content: center;
+    padding: 5px;
+}
+tr {
+    color: white;
+    align-items: center;
+    padding: 5px;
+}
+
+.text-field{
+    width: 10px;
+}
+
+
+
+
+}
+}
