--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,15 +1,14 @@
-
 * {
-    position: relative;
-    background: url("/src/assets/squeed2.jpg") no-repeat center center fixed;
-    background-size: cover;
+  position: relative;
+  background: url("/src/assets/squeed2.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 body {
   display: flex;
   flex-direction: column;
   margin: 0;
 
-#firstPage {
+  #firstPage {
     display: flex;
     flex-flow: row wrap;
     flex-direction: row;
@@ -17,27 +16,25 @@ body {
     margin: 0;
     padding: 0;
     width: 100vw;
-
-}
-.reportPage {
-    background: #343A40;
-    
-}
-a{
+  }
+  .reportPage {
+    background: #343a40;
+  }
+  a {
     position: relative;
+  }
 
-}
-
-.back-btn{
-position: absolute;
-top: 50%;
-}
-.button-container {
+  .back-btn {
+    position: absolute;
+    top: 50%;
+  }
+  .button-container {
     display: flex;
+    position: relative;
     justify-content: center;
     width: 100vw;
-}
-.firstpage-button {
+  }
+  .firstpage-button {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,19 +47,20 @@ top: 50%;
     font-weight: bold;
     background-color: rgba(249, 177, 34, 0.75);
     margin: 0 1rem 5rem;
-}
+    margin-top: 16rem;
+    cursor: pointer;
+  }
 
-.loggabox {
+  .loggabox {
     display: flex;
     margin: 0;
     justify-content: center;
     width: 100vw;
     height: 100px;
     background: rgba(197, 196, 196, 0.8);
-}
-
-.squeedLogga,
-a {
+  }
+  .squeedLogga,
+  a {
     width: 289px;
     height: 100px;
     font-family: Changa;
@@ -72,135 +70,167 @@ a {
     line-height: 118px;
     color: rgba(249, 177, 34, 0.9);
     flex: 1 1 auto;
-}
-a:hover {
+    cursor: pointer;
+  }
+  a:hover {
     color: rgba(249, 177, 34, 0.9);
     text-decoration: none;
-}
-.container-box{
+  }
+  .container-box {
     margin-top: 5rem;
-}
-table {
-    width: 100%; 
+  }
+  table {
+    width: 100%;
     border-collapse: collapse;
-    text-align: left; 
-}
-table-box,
-td,
-th {
+    text-align: left;
+  }
+  .informatin-box-month {
+    border: 2px solid black;
+    background: grey;
+    width: 20rem;
+    height: 10rem;
+  }
+  table-box,
+  td,
+  th {
     border-bottom: 1px solid black;
     margin: 7rem;
-    padding: 6px; 
+    padding: 6px;
     text-align: left;
-
-}
-th {
+  }
+  th {
     color: white;
     align-content: center;
-}
-tr {
+  }
+  tr {
     color: white;
     align-items: center;
-}
+  }
+  .loggabox {
+    display: flex;
+    margin: 0;
+    justify-content: center;
+    width: 100vw;
+    height: 100px;
+    background: rgba(197, 196, 196, 0.8);
+  }
+  .input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .box-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+  }
 
-
-@media (max-width: 812px) {
+  @media (max-width: 812px) {
     body {
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        background-size: cover;
-        background-attachment: fixed;
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      background-size: cover;
+      background-attachment: fixed;
     }
-
+    .button-container {
+      display: flex;
+      justify-content: center;
+      width: 100vw;
+    }
     .box {
-        display: flex;
-        flex-direction: column;
-        justify-items: center;
-        align-items: center;
-        background: rgba(197, 196, 196, 0.8);
-        width: 300px;
-        height: 400px;
-        border-radius: 10%;
-        margin: 5rem 0 0;
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
+      align-items: center;
+      background: rgba(197, 196, 196, 0.8);
+      width: 300px;
+      height: 400px;
+      border-radius: 10%;
+      margin: 5rem 0 0;
     }
-    .edit-btn{
-        border-radius: 10%;
+    .edit-btn {
+      border-radius: 10%;
     }
     .google-btn {
-        display: flex;
-        justify-items: center;
-        border-radius: 10px;
-        height: 2rem;
-        width: 5rem;
-        justify-content: center;
-        background-color: white;
-        font-weight: bold;
-        font-size: 0.9rem;
+      display: flex;
+      justify-items: center;
+      border-radius: 10px;
+      height: 2rem;
+      width: 2rem;
+      justify-content: center;
+      background-color: white;
+      font-weight: bold;
+      font-size: 0.9rem;
     }
     .container-box {
-        box-sizing: border-box;
-        margin: 2rem;
-        height: 30rem;
+      box-sizing: border-box;
+      margin: 2rem;
+      height: 30rem;
     }
     .sticky {
-        position: fixed;
-        top: 0;
-        width: 100%;
+      position: fixed;
+      top: 0;
+      width: 100%;
     }
     .sendReport {
-        border: 1px solid black;
-        border-radius: 10px;
+      border: 1px solid black;
+      border-radius: 10px;
     }
     .redigera {
-        border: 1px solid black;
-        margin: 1rem;
-        width: 7rem;
-        border-radius: 10px;
+      border: 1px solid black;
+      margin: 1rem;
+      width: 7rem;
+      border-radius: 10px;
     }
     p {
-        font-size: 1rem;
+      font-size: 1rem;
     }
-  
+
     .container-box .container th tr {
-        box-sizing: border-box;
-        margin: 5rem;
-        height: 30rem;
-        background-color: white;
+      box-sizing: border-box;
+      margin: 5rem;
+      height: 30rem;
+      background-color: white;
     }
-    #ReportPage{
-        align-items: center;
-        vertical-align: bottom;
-        text-align: left;
+    #ReportPage {
+      align-items: center;
+      vertical-align: bottom;
+      text-align: left;
+    }
+    .month-container {
+      display: grid;
+      text-align: center;
+      top: 8rem;
+      left: 0.5rem;
+      margin-right: 2rem;
+      padding: 1rem;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 35px;
+    }
+    table-box,
+    td,
+    th {
+      border-bottom: 1px solid black;
+      margin: 7rem;
+      padding: 6px;
+      text-align: left;
+    }
+    th {
+      color: white;
+      align-content: center;
+      padding: 5px;
+    }
+    tr {
+      color: white;
+      align-items: center;
+      padding: 5px;
+    }
 
-}
-table-box,
-td,
-th {
-    border-bottom: 1px solid black;
-    margin: 7rem;
-    padding: 6px; 
-    text-align: left;
-
-
-}
-th {
-    color: white;
-    align-content: center;
-    padding: 5px;
-}
-tr {
-    color: white;
-    align-items: center;
-    padding: 5px;
-}
-
-.text-field{
-    width: 10px;
-}
-
-
-
-
-}
+    .text-field {
+      width: 10px;
+    }
+  }
 }
