--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,297 +1,451 @@
 * {
-  position: relative;
-  font-family: Changa;
+  font-family: Whyte, sans-serif;
 }
 body {
   display: flex;
   flex-direction: column;
   margin: 0;
   padding-top: 90px;
+}
+.loggabox {
+  display: grid;
+  margin: 0;
+  justify-content: center;
+  width: 100vw;
+  height: 100px;
+  background: #c4c4c4;
+}
 
-  /*#firstPage {
-    display: grid;
-    grid-template-rows: 2rem 1fr;
-  }*/
-  .loggabox {
-    display: grid;
-    margin: 0;
-    justify-content: center;
-    width: 100vw;
-    height: 100px;
-    background: rgba(197, 196, 196, 0.8);
-  }
-  #navBar {
-    display: grid;
-    grid-template-rows: 100px 1fr;
-    grid-gap: 60px;
-    margin: 0 auto;
-  }
-  /*
-  .squeedLogga,
-  a {
-    width: 100%;
-    height: auto;
-    font-family: Changa;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 50px;
-    line-height: 118px;
-    color: rgba(249, 177, 34, 0.9);
-    flex: 1 1 auto;
-    cursor: pointer;
-  }*/
-  a {
-    position: relative;
-  }
-  #ReportPage {
-    background-color: #343a40;
-    width: 100%;
-  }
+a {
+  position: relative;
+}
+#ReportPage {
+  background-color: #343a40;
+  width: 100%;
+  height: auto;
+}
 
-  .back-btn {
-    position: absolute;
-    top: 50%;
-    text-decoration: none;
-  }
-  .buttonClose {
-    background: none;
-    font-size: 1rem;
-  }
-  .button-container {
-    display: flex;
-    position: relative;
-    justify-content: center;
-    width: 100vw;
-  }
-  .firstpage-button {
+.summery-holder {
+  display: flex;
+  background-color: #343a40;
+  flex-direction: column;
+  align-items: center;
+  top: 3vh;
+}
+
+.sendReport {
+  position: relative;
+  display: flex;
+  border: 2px solid orange;
+  box-shadow: 1px 1px 1px orange;
+  border-radius: 2px;
+  background-color: orange;
+  height: 30px;
+  /* top: 11px; */
+  width: 200px;
+  cursor: pointer;
+  padding-bottom: 2px;
+}
+.sendReport p {
+  margin: 0 auto;
+  left: 0.5rem;
+  justify-content: center;
+  padding-top: 4px;
+  color: white;
+  font-size: 1rem;
+}
+.summa {
+  color: white;
+  font-size: 1rem;
+}
+.counter {
+  display: inline-flex;
+  padding: 1em;
+  margin: 0;
+}
+.counter p {
+  padding: 1.2em;
+}
+
+.back-btn {
+  position: absolute;
+  top: 50%;
+  text-decoration: none;
+}
+.buttonClose {
+  background: none;
+  color: orange;
+  font-size: 1.2rem;
+  position: absolute;
+  top: 3px;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+}
+.button-container {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  width: 100vw;
+  height: 40px;
+}
+.Headpage-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 2rem;
+  border: none;
+  color: Black;
+  font-weight: bold;
+  background-color: rgba(249, 177, 34, 1);
+  cursor: pointer;
+}
+a:hover {
+  color: rgba(249, 177, 34, 0.9);
+  text-decoration: none;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+#containerList {
+  margin-top: 0.7rem;
+}
+
+table-box,
+td,
+th {
+  border-bottom: 1px solid black;
+  margin: 7rem;
+  padding: 6px;
+  align-content: center;
+}
+.summa-text {
+  width: 10px;
+}
+th {
+  color: white;
+}
+tr {
+  color: white;
+  align-items: center;
+  align-content: center;
+}
+
+.table-box {
+  background-color: #343a40;
+  width: 70%;
+  height: 95%;
+  border-radius: 12px;
+  top: 1rem;
+  align-items: center;
+  left: 1rem;
+  right: 1rem;
+  transition: 1.5s all cubic-bezier(0.39, 0.575, 0.565, 1);
+  transform: translateZ(0);
+  perspective: 1000px;
+  backface-visibility: hidden;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.box-container {
+  display: flex;
+  flex-direction: grid;
+  align-items: center;
+  width: 100vw;
+}
+i {
+  border: none;
+  border-width: 0%;
+  display: inline-block;
+  padding: 0;
+}
+#myPage {
+  text-align: center;
+  font-family: "Courier New", Courier, monospace;
+  cursor: pointer;
+}
+#myPage .grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  margin: 0 auto;
+}
+.grid {
+  background-color: #343a40;
+  width: 90%;
+  border-radius: 12px;
+  top: 1rem;
+}
+
+.container-flex {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #343a40;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 20px;
+  border-radius: 20px;
+  height: 50%;
+  align-content: center;
+}
+
+.container-flex ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  width: 100%;
+  flex-wrap: wrap;
+  height: 35em;
+}
+
+.container-flex ul li {
+  display: flex;
+  width: 33.333%;
+  padding: 20px 0;
+}
+
+#MyLoggbox {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 60px;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  overflow: hidden;
+}
+
+#MyLoggbox .squeedLogga a {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+#app #navBar {
+  position: fixed;
+  top: 60px;
+  z-index: 20;
+}
+.hours {
+  width: 10%;
+}
+
+.edit-btn {
+  position: relative;
+  left: 0%;
+}
+.saveItem {
+  position: relative;
+  left: 0%;
+}
+
+.startpage-info {
+  color: black;
+  border: 3px solid orange;
+  background-color: white;
+  opacity: 0.9;
+  border-radius: 5px;
+  position: fixed;
+  top: 60%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+}
+.startpage-info p {
+  font-size: 1rem;
+  font-family: Whyte, sans-serif;
+}
+.startpage-info .rubrik {
+  font-size: 5.2rem;
+}
+
+/* ----------------------------------MOBILE---------------------------- */
+
+@media (max-width: 375px) {
+  body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 2rem;
-    border: none;
-    color: Black;
-    font-weight: bold;
-    background-color: rgba(249, 177, 34, 1);
+    margin: 0;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: Changa;
+    color: rgba(249, 177, 34, 0.9);
+  }
+  .squeedLogga {
+    font-family: Changa;
+    color: rgba(249, 177, 34, 0.9);
+    font-style: normal;
+    font-weight: normal;
     cursor: pointer;
   }
-  a:hover {
-    color: rgba(249, 177, 34, 0.9);
-    text-decoration: none;
+  #MyLoggbox .squeedLogga {
+    bottom: 1rem;
+    font-size: 1rem;
+    color: black;
+  }
+  .Information-mypage p {
+    font-size: 1rem;
+    align-content: center;
+    left: 0;
   }
 
-  table {
+  #container-mypage {
+    display: relative;
+    flex-wrap: wrap;
+    border-radius: 0%;
+    width: 100vw;
+  }
+  #container-mypage button {
+    height: 2.5rem;
     width: 100%;
-    border-collapse: collapse;
-    text-align: left;
+    border-radius: 0%;
+    flex-basis: 5;
+  }
+  i {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 4px;
   }
 
+  .right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+
+  .box {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    background: rgba(197, 196, 196, 0.8);
+    width: 300px;
+    height: 400px;
+    border-radius: 10%;
+    margin: 5rem 0 0;
+  }
+  .sendReport {
+    bottom: 0.5rem;
+  }
+
+  .input-change input {
+    width: 35px;
+  }
+  .hours {
+    width: 10%;
+  }
+
+  .google-btn {
+    display: flex;
+    justify-items: center;
+    border-radius: 10px;
+    height: 2rem;
+    width: 2rem;
+    justify-content: center;
+    background-color: white;
+    font-weight: bold;
+    font-size: 0.9rem;
+  }
+
+  .redigera {
+    border: 1px solid black;
+    margin: 1rem;
+    width: 7rem;
+    border-radius: 10px;
+  }
+  p {
+    font-size: 1rem;
+  }
+
+  #containerbox .container th tr {
+    /* box-sizing: border-box;
+      margin: 5rem;
+      height: 30rem; */
+    background-color: white;
+  }
+  #ReportPage {
+    align-items: center;
+    vertical-align: bottom;
+    text-align: left;
+    width: 100vw;
+  }
+  .month-container {
+    display: grid;
+    text-align: center;
+    top: 8rem;
+    left: 0.5rem;
+    margin-right: 2rem;
+    padding: 1rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 35px;
+  }
   table-box,
   td,
   th {
     border-bottom: 1px solid black;
     margin: 7rem;
-    padding: 6px;
-    text-align: center;
+    text-align: left;
   }
   th {
     color: white;
     align-content: center;
+    padding: 3px;
   }
   tr {
     color: white;
-    align-items: center;
+    align-items: left;
+    padding: 3px;
   }
-  .table-box {
-    background-color: #343a40;
-    width: 95%;
-    height: 95%;
-    border-radius: 12px;
-    top: 1rem;
-    align-items: center;
-    left: 1rem;
-    right: 1rem;
-    transition: 1.5s all cubic-bezier(0.39, 0.575, 0.565, 1);
-    transform: translateZ(0);
-    perspective: 1000px;
-    backface-visibility: hidden;
-  }
-  .loggabox {
-    display: flex;
-    margin: 0;
-    justify-content: center;
-    width: 100vw;
-    height: 100px;
-    background: rgba(197, 196, 196, 0.8);
-  }
-  .input-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .box-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-  }
-  #myPage {
-    /*display: grid;
-    grid-template-rows: 4rem 1fr;*/
-    text-align: center;
-    font-family: "Courier New", Courier, monospace;
-    cursor: pointer;
-  }
-  #myPage .grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    margin: 0 auto;
-  }
-  .grid {
-    background-color: #343a40;
-    width: 90%;
-    /*height: 95%;*/
-    border-radius: 12px;
-    top: 1rem;
+  thead {
+    border-radius: 0%;
   }
 
-  .container-flex {
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #343a40;
-    max-width: 600px;
-    margin: 0 auto;
-    margin-top: 20px;
-    border-radius: 20px;
+  .text-field {
+    width: 8px;
   }
-
-  .container-flex ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    width: 100%;
-    flex-wrap: wrap;
+  #container-mypage {
+    margin-top: 0;
   }
 
   .container-flex ul li {
-    display: flex;
-    width: 33.333%;
-    padding: 20px 0;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
+    padding: 0px 15px;
   }
 
   .container-flex ul li button {
-    display: inline-flex;
+    text-align: left;
+    justify-content: left;
+    position: relative;
   }
 
-  @media (max-width: 812px) {
-    body {
-      display: flex;
-      flex-direction: column;
-      margin: 0;
-      background-size: cover;
-      background-attachment: fixed;
-    }
-    .button-container {
-      display: flex;
-      justify-content: center;
-      width: 100vw;
-    }
-    .box {
-      display: flex;
-      flex-direction: column;
-      justify-items: center;
-      align-items: center;
-      background: rgba(197, 196, 196, 0.8);
-      width: 300px;
-      height: 400px;
-      border-radius: 10%;
-      margin: 5rem 0 0;
-    }
-    .edit-btn {
-      border-radius: 10%;
-    }
-    .google-btn {
-      display: flex;
-      justify-items: center;
-      border-radius: 10px;
-      height: 2rem;
-      width: 2rem;
-      justify-content: center;
-      background-color: white;
-      font-weight: bold;
-      font-size: 0.9rem;
-    }
-    .container-box {
-      box-sizing: border-box;
-      margin: 2rem;
-      height: 30rem;
-    }
-    .sticky {
-      position: fixed;
-      top: 0;
-      width: 100%;
-    }
-    .sendReport {
-      border: 1px solid black;
-      border-radius: 10px;
-    }
-    .redigera {
-      border: 1px solid black;
-      margin: 1rem;
-      width: 7rem;
-      border-radius: 10px;
-    }
-    p {
-      font-size: 1rem;
-    }
+  .container-flex ul li button i {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    margin-top: -6px;
+  }
 
-    .container-box .container th tr {
-      box-sizing: border-box;
-      margin: 5rem;
-      height: 30rem;
-      background-color: white;
-    }
-    #ReportPage {
-      align-items: center;
-      vertical-align: bottom;
-      text-align: left;
-    }
-    .month-container {
-      display: grid;
-      text-align: center;
-      top: 8rem;
-      left: 0.5rem;
-      margin-right: 2rem;
-      padding: 1rem;
-      grid-template-columns: repeat(2, 1fr);
-      grid-gap: 35px;
-    }
-    table-box,
-    td,
-    th {
-      border-bottom: 1px solid black;
-      margin: 7rem;
-      padding: 6px;
-      text-align: left;
-    }
-    th {
-      color: white;
-      align-content: center;
-      padding: 5px;
-    }
-    tr {
-      color: white;
-      align-items: center;
-      padding: 5px;
-    }
-
-    .text-field {
-      width: 10px;
-    }
+  .buttonClose {
+    position: abosolute;
+    margin: auto;
+  }
+  .edit-btn {
+    position: relative;
+    left: 0%;
+  }
+  .saveItem {
+    position: relative;
+    left: 0%;
   }
 }
